-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.2.0 Alpha
-
None
In 5.1, calling toLocalTime on an invalid QDateTime returns an invalid QDateTime. In 5.2 it returns a 'valid' QDateTime.
Probably QDateTime::toTimeSpec needs to add a check for whether the current QDateTime is valid or not.
For Gerrit Dashboard: QTBUG-34020 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
68380,2 | QDateTime - Fix toTimeSpec() for invalid datetimes | stable | qt/qtbase | Status: MERGED | +2 | 0 |