tests/auto/corelib/tools/qdatetime/tst_qdatetime.cpp
@@ -147,6 +147,8 @@ private slots:
     void daylightTransitions() const;
     void timeZones() const;
 
+    void invalid() const;
+
 private:
     bool europeanTimeZone;
     QDate defDate() const { return QDate(1900, 1, 1); }
@@ -2897,6 +2899,25 @@ void tst_QDateTime::timeZones() const
     // - Test 03:00:00 = 1 hour after tran
     hourAfterStd = QDateTime(QDate(2013, 10, 27), QTime(3, 0, 0), cet);
     QCOMPARE(hourAfterStd.toMSecsSinceEpoch(), dstToStdMSecs + 3600000);
+}
+
+void tst_QDateTime::invalid() const
+{
+    QDateTime invalidDate = QDateTime(QDate(0, 0, 0), QTime(-1, -1, -1));
+    QCOMPARE(invalidDate.isValid(), false);
+    QCOMPARE(invalidDate.timeSpec(), Qt::LocalTime);
+
+    QDateTime utcDate = invalidDate.toUTC();
+    QCOMPARE(utcDate.isValid(), false);
+    QCOMPARE(utcDate.timeSpec(), Qt::UTC);
+
+    QDateTime offsetDate = invalidDate.toOffsetFromUtc(3600);
+    QCOMPARE(offsetDate.isValid(), false);
+    QCOMPARE(offsetDate.timeSpec(), Qt::OffsetFromUTC);
+
+    QDateTime tzDate = invalidDate.toTimeZone(QTimeZone("Europe/Oslo"));
+    QCOMPARE(tzDate.isValid(), false);
+    QCOMPARE(tzDate.timeSpec(), Qt::TimeZone);
 }
 
 QTEST_APPLESS_MAIN(tst_QDateTime)
